# Animated_RTracer

./: README.md
R_Tracer/: AnimatedXform.cpp  AnimatedXform.h  CMakeLists.txt  Camera.h  ContainBox.cpp  ContainBox.h  Geometry.h  Hitable.cpp  Hitable.h  Hitablebox.cpp  Hitablebox.h  Light.h  Meshhitable.cpp  Meshhitable.h  Ray.h  Scene.cpp  Scene.h  StaticXform.cpp  StaticXform.h  Texturetriangles.cpp  Texturetriangles.h  Triangle.cpp  Triangle.h  Vec3.h  Xform.h  animation.cpp  animation.h  kbsplpos.cpp  kbsplpos.h  kbsplrot.cpp  kbsplrot.h  main.cpp  parse.cpp  parse.h  quat.cpp  quat.h  texture.cpp  texture.h
